<resources>
    <string name="app_name">cAPP</string>
    <string name="text_usterka">Opisz swój problem</string>
    <string name="but_wiadomosci">wiadomości</string>
    <string name="but_usterka">usterka</string>
    <string name="but_zlecenia">zlecenia</string>
    <string name="but_mapy">mapy</string>
    <string name="but_dokumenty">przekazanie pojazdu</string>
    <string name="but_ustawienia">ustawienia</string>

    <string name="but_zrob_zdjecie">Zrób zdjęcie</string>
    <string name="but_wyslij">Wyślij</string>
    <string name="but_wiadomosc_wyslij">Wyślij</string>
    <string name="edit_trescWiadomosci">Wpisz tresc wiadomosci</string>
    <string name="checkBox_taknie">Tak/Nie</string>
    <string name="but_dalej">Dalej</string>
    <string name="CiagnikNaczepaTV">Ciagnik + Naczepa</string>
    <string name="stanTechniczny">Stan techniczny pojazdu</string>
    <string name="odbiorBezZastrzezen">Odbiór bez zastrzeżeń</string>
    <string name="checkBoxTak">Tak</string>
    <string name="checkBoxNie">Nie</string>
    <string name="wnetrzeKabiny">Wnętrze kabiny</string>
    <string name="pojazdZewnatrz">Pojazd z zewnątrz</string>
    <string name="dokumentyNaczepy">Dokumenty naczepy</string>
    <string name="zeszytDoNaczepy">Zeszyt do naczepy</string>
    <string name="liczbaPasow">Liczba pasów</string>
    <string name="liczbaNaroznikow">Liczba narożników</string>
    <string name="liczbaDesekAluminiowych">Liczba desek aluminiowych</string>
    <string name="liczbaDesekRozporowych">Liczba desek rozporowych</string>
    <string name="drabina">Drabina</string>
    <string name="tyczkaDachu">Tyczka dachu</string>
    <string name="tablicaDoGabarytow">Tablica do gabarytów</string>
    <string name="wyposażenieNaczepy">Wyposażenie naczepy</string>
    <string name="dokumentyPojazdu">Dokumenty pojazdu</string>
    <string name="dowodRejestracyjnyPojazdu">Dowód rejestracyjny pojazdu</string>
    <string name="certyfikatEuro">Certyfikat euro</string>
    <string name="upowaznienieLeasingowe">Upowaznienie leasingowe</string>
    <string name="kartaSHELL">Karta SHELL z PIN-em</string>
    <string name="kartaRevolut">Karta Revolut</string>
    <string name="licencja">Licencja</string>
    <string name="ubezpieczenieKabotażowe">Ubezpieczenie kabotażowe</string>
    <string name="PozwolenieNaPrzewozSmieci">Pozwolenie na przewóz śmieci</string>
    <string name="wyposazeniePojazdu">Wyposazenie pojazdu</string>
    <string name="skrzynka">Skrzynka</string>
    <string name="lancuchy">Łancuchy</string>
    <string name="podnosnikZaczep">Podnośnik + Zaczep</string>
    <string name="kluczPlanetarny">Klucz planetarny</string>
    <string name="manometrZPrzewodem">Manometr + przewód do pompowania kół</string>
    <string name="zrobZdjecieUsterki">Zrob zdjecie usterki</string>
    <string name="zdajacy">Zdajacy</string>
    <string name="odbierajacy">Odbierajacy</string>
    <string name="przekazaniePojazdu">Przekazanie pojazdu</string>
    <string name="samaNaczepaButton">Sama naczepa</string>
    <string name="ciagnikNaczepaButton">Ciągnik + Naczepa</string>
    <string name="nrRejestracyjnyNaczepyHint">Nr Rejestracyjny Naczepy</string>
    <string name="naczepa">Naczepa</string>
    <string name="podajLiczbeSztHint">Podaj liczbe szt</string>
    <string name="nrRejestracyjnyCiagnika">Nr rejestracyjny Ciagnika</string>
    <string name="utworzNoweZlecenie">Utworz nowe zlecenie</string>
    <string name="wiadOdebrane">Odebrane</string>
    <string name="wiadWyslane">Wyslane</string>
    <string name="trybJasny">Tryb jasny</string>
    <string name="nrPojazdu">Nr Pojazdu</string>
    <string name="nowaWiadomosc">Utworz nową wiadomość</string>
    <string name="trescWiad">Treść: </string>
    <string name="tematWiad">Temat: </string>
    <string name="dataWiadomosci">Data wysłania: </string>
    <string name="odbiorcaWiad">Odbiorca: </string>
    <string name="nadawcaWiad">Nadawca: </string>
</resources>