<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DokumentyFormularzCN2">

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/wyposazeniePojazdu"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="162dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/skrzynka"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/lancuchy"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/podnosnikZaczep"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="162dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/kluczPlanetarny"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="162dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/manometrZPrzewodem"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <CheckBox
        android:id="@+id/lancuchyTakNie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:text="@string/checkBox_taknie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/skrzynkaTakNie"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <CheckBox
        android:id="@+id/skrzynkaTakNie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="64dp"
        android:text="@string/checkBox_taknie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <CheckBox
        android:id="@+id/podnosnikTakNie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="@string/checkBox_taknie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/lancuchyTakNie" />

    <CheckBox
        android:id="@+id/kluczTakNie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="@string/checkBox_taknie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView37"
        app:layout_constraintTop_toBottomOf="@+id/podnosnikTakNie" />

    <CheckBox
        android:id="@+id/manometrTakNie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="@string/checkBox_taknie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView38"
        app:layout_constraintTop_toBottomOf="@+id/kluczTakNie" />

    <Button
        android:id="@+id/dalejButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/but_dalej"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

</androidx.constraintlayout.widget.ConstraintLayout>