<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="19dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="226dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="401dp" />

    <Button
        android:id="@+id/button_ustawienia"
        android:layout_width="176dp"
        android:layout_height="175dp"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:text="@string/but_ustawienia"
        app:cornerRadius="30dp"
        app:icon="@drawable/icons8_settings_64px"
        app:iconGravity="textTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_usterka"
        android:layout_width="176dp"
        android:layout_height="175dp"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:text="@string/but_usterka"
        app:cornerRadius="30dp"
        app:icon="@drawable/icons8_wrench_64px"
        app:iconGravity="textTop"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_wiadomosci"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_wiadomosci"
        android:layout_width="176dp"
        android:layout_height="175dp"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:text="@string/but_wiadomosci"
        app:cornerRadius="30dp"
        app:icon="@drawable/icons8_secured_letter_64px"
        app:iconGravity="textTop"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_mapy"
        android:layout_width="176dp"
        android:layout_height="175dp"
        android:text="@string/but_mapy"
        app:cornerRadius="30dp"
        app:icon="@drawable/icons8_location_64px_1"
        app:iconGravity="textTop"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_dokumenty"
        android:layout_width="176dp"
        android:layout_height="175dp"
        android:text="@string/but_dokumenty"
        app:cornerRadius="30dp"
        app:icon="@drawable/icons8_google_forms_64px_1"
        app:iconGravity="textTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_zlecenia"
        android:layout_width="176dp"
        android:layout_height="175dp"
        android:text="@string/but_zlecenia"
        app:cornerRadius="30dp"
        app:icon="@drawable/icons8_truck_64px"
        app:iconGravity="textTop"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>