<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WiadomosciWyslij">

    <Button
        android:id="@+id/wyslijButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="159dp"
        android:text="@string/but_wiadomosc_wyslij"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTresc"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTresc"
        android:layout_width="376dp"
        android:layout_height="139dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edit_trescWiadomosci"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/nadawcaTV"
        android:layout_width="195dp"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="104dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/odbiorcaTV"
        android:layout_width="195dp"
        android:layout_height="23dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="104dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nadawcaTV" />

    <TextView
        android:id="@+id/dataWyslaniaTV"
        android:layout_width="195dp"
        android:layout_height="23dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="92dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toEndOf="@+id/textView51"
        app:layout_constraintTop_toBottomOf="@+id/odbiorcaTV" />

    <TextView
        android:id="@+id/tematTV"
        android:layout_width="278dp"
        android:layout_height="31dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataWyslaniaTV" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="195dp"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:text="@string/trescWiad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tematTV" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="369dp"
        android:layout_height="154dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView52">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trescTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView50"
        android:layout_width="57dp"
        android:layout_height="23dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tematWiad"
        app:layout_constraintBottom_toTopOf="@+id/textView52"
        app:layout_constraintEnd_toStartOf="@+id/tematTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="103dp"
        android:layout_height="23dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/dataWiadomosci"
        app:layout_constraintBottom_toTopOf="@+id/textView50"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="68dp"
        android:layout_height="23dp"
        android:layout_marginBottom="4dp"
        android:text="@string/odbiorcaWiad"
        app:layout_constraintBottom_toTopOf="@+id/textView51"
        app:layout_constraintEnd_toStartOf="@+id/odbiorcaTV"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="71dp"
        android:layout_height="23dp"
        android:layout_marginBottom="8dp"
        android:text="@string/nadawcaWiad"
        app:layout_constraintBottom_toTopOf="@+id/textView53"
        app:layout_constraintEnd_toStartOf="@+id/nadawcaTV"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>